fix(editor): Fix wf history button visibility issue (#18804)

--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -276,15 +276,15 @@
 	--color-button-secondary-disabled-border: var(--p-gray-200);
 
 	// Button highlight
-	--color-button-highlight-font: var(--prim-gray-670);
+	--color-button-highlight-font: var(--p-gray-670);
 	--color-button-highlight-border: transparent;
 	--color-button-highlight-background: transparent;
-	--color-button-highlight-hover-active-focus-font: var(--prim-color-primary-shade-100);
-	--color-button-highlight-hover-active-focus-border: var(--prim-gray-40);
-	--color-button-highlight-hover-background: var(--prim-gray-40);
-	--color-button-highlight-active-focus-background: var(--prim-gray-40);
-	--color-button-highlight-focus-outline: var(--prim-gray-40);
-	--color-button-highlight-disabled-font: var(--prim-gray-120);
+	--color-button-highlight-hover-active-focus-font: var(--p-color-primary-shade-100);
+	--color-button-highlight-hover-active-focus-border: var(--p-gray-40);
+	--color-button-highlight-hover-background: var(--p-gray-40);
+	--color-button-highlight-active-focus-background: var(--p-gray-40);
+	--color-button-highlight-focus-outline: var(--p-gray-40);
+	--color-button-highlight-disabled-font: var(--p-gray-120);
 	--color-button-highlight-disabled-border: transparent;
 	--color-button-highlight-disabled-background: transparent;
 
